<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".fragments.OrderPlaced">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/confirm_popup"
        app:layout_constraintBottom_toTopOf="@+id/backToHomeBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/order_placed"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/gifImageView3"
        app:layout_constraintStart_toStartOf="@+id/gifImageView3"
        app:layout_constraintTop_toBottomOf="@+id/gifImageView3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backToHomeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/back_to_home"
        android:textColor="@color/green"
        android:textSize="14sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/orderplaced"
        android:src="@drawable/frame_stars"
        app:layout_constraintEnd_toEndOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

</androidx.constraintlayout.widget.ConstraintLayout>