<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.UpsertCard">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/saveorupdatetoolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:menu="@menu/savedcards_menu"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="@id/guideline6"
        app:layout_constraintEnd_toStartOf="@id/guideline7"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/holder_name"
        android:textColor="@color/black"
        android:textFontWeight="500"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/guideline6"
        app:layout_constraintTop_toBottomOf="@id/saveorupdatetoolbar" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_holder_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="1dp"
        app:helperTextEnabled="true"
        android:textColorHint="@color/hint_grey"
        app:helperTextTextColor="@color/red"
        app:boxStrokeColor="@color/grey"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/textView13"
        app:layout_constraintStart_toStartOf="@id/guideline6"
        app:layout_constraintEnd_toStartOf="@id/guideline7">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/eg_john_doe"
            android:paddingVertical="12dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtviewcardNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/card_number"
        android:textColor="@color/black"
        android:textFontWeight="500"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/input_holder_name"
        app:layout_constraintStart_toStartOf="@id/guideline6" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_card_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        app:boxStrokeWidth="1dp"
        app:boxStrokeColor="@color/grey"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/red"
        android:textColorHint="@color/hint_grey"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        android:hint="@string/eg_1234_5678_9012_3456"
        app:layout_constraintTop_toBottomOf="@id/txtviewcardNo"
        app:layout_constraintStart_toStartOf="@id/guideline6"
        app:layout_constraintEnd_toStartOf="@id/guideline7">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:paddingVertical="12dp"
            android:paddingEnd="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imgviewcardtype"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignTop="@id/input_card_number"
        android:layout_alignEnd="@id/input_card_number"
        android:layout_gravity="end|center"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/card_type"
        android:src="@drawable/credit_card"
        app:layout_constraintBottom_toBottomOf="@+id/input_card_number"
        app:layout_constraintEnd_toEndOf="@id/input_card_number"
        app:layout_constraintTop_toTopOf="@+id/input_card_number" />




    <TextView
        android:id="@+id/txtviewexpiry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/expiry_date"
        android:textColor="@color/black"
        android:textFontWeight="500"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/input_card_number"
        app:layout_constraintStart_toStartOf="@id/guideline6" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_expiry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:boxStrokeWidth="1dp"
        android:hint="MM/YYYY"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/red"
        android:textColorHint="@color/hint_grey"
        app:boxStrokeColor="@color/grey"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/txtviewexpiry"
        app:layout_constraintStart_toStartOf="@id/guideline6"
        app:layout_constraintEnd_toStartOf="@id/guideline7">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:paddingVertical="12dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- CVV -->
    <TextView
        android:id="@+id/txtviewcvv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cvv"
        android:textColor="@color/black"
        android:textFontWeight="500"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/input_expiry"
        app:layout_constraintStart_toStartOf="@id/guideline6" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_cvv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:hint="eg:123"
        app:boxStrokeWidth="1dp"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/red"
        android:textColorHint="@color/hint_grey"
        app:boxStrokeColor="@color/grey"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/txtviewcvv"
        app:layout_constraintStart_toStartOf="@id/guideline6"
        app:layout_constraintEnd_toStartOf="@id/guideline7">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:paddingVertical="12dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveorupdatecardbtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/save_changes"
        app:cornerRadius="8dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline7"
        app:layout_constraintStart_toStartOf="@id/guideline6" />

</androidx.constraintlayout.widget.ConstraintLayout>
