<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout

        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:background="@color/white"
        tools:context=".fragments.Login">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"

            android:src="@drawable/grocerly"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxStrokeColor="@android:color/transparent"
                app:boxStrokeWidth="0dp"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edttxtemail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/email"
                    android:background="@color/white"
                    android:drawablePadding="10dp"
                    android:textColor="@color/black"
                    android:hint="@string/email"
                    android:textColorHint="@color/grey" />

            </com.google.android.material.textfield.TextInputLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxStrokeColor="@android:color/transparent"
                app:boxStrokeWidth="0dp"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edttxtpassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="10dp"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/grey" />

            </com.google.android.material.textfield.TextInputLayout>


        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/baloo_da_2_medium"
            android:text="@string/forgot_password"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/materialCardView2"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView2" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginbtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/green"
                android:fontFamily="@font/baloo_da_2_semibold"
                android:text="@string/login_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:layout_editor_absoluteX="157dp" />


        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/linearLayout12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/materialCardView3"
            app:layout_constraintStart_toStartOf="@+id/materialCardView3"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView3">


            <TextView
                android:id="@+id/crtaccounttxtview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_da_2_medium"
                android:letterSpacing="0.05"
                android:text="@string/create_an_account"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView3" />

            <TextView
                android:id="@+id/actiontosignuptxtview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/baloo_da_2_bold"
                android:text="@string/login_signup"
                android:textColor="@color/green"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/crtaccounttxtview"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                app:layout_constraintStart_toEndOf="@+id/crtaccounttxtview"
                app:layout_constraintTop_toTopOf="@+id/crtaccounttxtview" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout12"
            app:layout_constraintStart_toStartOf="@+id/linearLayout12"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout12">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginEnd="30dp"
                android:src="@drawable/google" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/facebook" />


            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:src="@drawable/twitter" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>
